--- a/_sass/minimal-mistakes/_variables.scss
+++ b/_sass/minimal-mistakes/_variables.scss
@@ -60,7 +60,7 @@ $code-background-color-dark : $light-gray !default;
 $text-color                 : $dark-gray !default;
 $border-color               : #f2f2f2 !default;
 
-$primary-color              : #443266 !default;
+$primary-color              : #228b22 !default;
 $success-color              : #298F7F !default;
 $warning-color              : #8F2939 !default;
 $danger-color               : #8F0118 !default;
