--- a/_sass/minimal-mistakes/_variables.scss
+++ b/_sass/minimal-mistakes/_variables.scss
@@ -64,7 +64,7 @@ $primary-color              : #228b22 !default;
 $success-color              : #298F7F !default;
 $warning-color              : #8F2939 !default;
 $danger-color               : #8F0118 !default;
-$info-color                 : #4302BF !default;
+$info-color                 : #006400 !default;
 
 /* brands */
 $behance-color              : #1769FF !default;
