--- a/_sass/minimal-mistakes/_navigation.scss
+++ b/_sass/minimal-mistakes/_navigation.scss
@@ -500,8 +500,8 @@
   color: $gray;
   text-transform: uppercase;
   letter-spacing: 1px;
-  background-color: #DFDFED;
-  border: 1px solid #9891B5;
+  background-color: #f0fff0;
+  border: 1px solid #8fbc8f;
   border-radius: $border-radius;
   box-shadow: $box-shadow;
 
